--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-.gitignore
+/.gitignore
 
 # testing
 /coverage
@@ -25,4 +25,4 @@ yarn-error.log*
 
 node_modules
 taiwind.config.js
-postcss.config.js
+/postcss.config.js
